--- a/IntentsExtension/IntentsExtension.entitlements
+++ b/IntentsExtension/IntentsExtension.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.io.nekohasekai.sfa</string>
+		<string>group.com.chanissue.sfa</string>
 	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
