--- a/TVExtension/TVExtension.entitlements
+++ b/TVExtension/TVExtension.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.io.nekohasekai.sfa</string>
+		<string>group.com.chanissue.sfa</string>
 	</array>
 </dict>
 </plist>
